<resources>
    <string name="app_name">GpsOneUfla1</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Anúbis</string>
    <string name="title_activity_geolocation">Geolocation</string>
    <string name="title_activity_creditos">Créditos</string>
    <string name="title_activity_geolocao">Geolocão</string>
    <string name="title_activity_rota">Rota</string>

    <string name="btn_gps_googlemapsv2">GPS</string>
    <string name="btn_geolocalizacao">Geolocation</string>
    <string name="btn_creditos">Créditos</string>
    <string name="btn_geolocation">Geolocation</string>
    <string name="btn_maps">Maps</string>
    <string name="btn_Rotas">Rota</string>
    <string name="btn_distancia">Distância</string>
    <string name="btn_local">Local</string>
    <string name="btn_clear">Clear</string>

</resources>
