<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_maps"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="chamaMaps"
        android:singleLine="false" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_Rotas"
        android:id="@+id/btn_Rota"
        android:layout_gravity="center_horizontal"
        android:onClick="chamaRotas"
        android:singleLine="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_geolocation"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:onClick="chamaGeolocao"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_creditos"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:onClick="chamaCreditos"/>
</LinearLayout>
