<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/abc_button_padding_vertical_material"
    android:paddingLeft="@dimen/abc_button_padding_horizontal_material"
    android:paddingRight="@dimen/abc_button_padding_horizontal_material"
    android:paddingTop="@dimen/abc_button_padding_vertical_material"
    tools:context="com.monteolimpo.gpsoneufla1.RotaActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/btn_distancia"
            android:text="@string/btn_distancia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:onClick="getDistance" />

        <Button
            android:id="@+id/btn_local"
            android:text="@string/btn_local"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="getLocation" />

        <Button
            android:id="@+id/btn_rota"
            android:text="@string/btn_Rotas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="getRouteByGMAV2"/>

        <!--Button
            android:id="@+id/btn_clear"
            android:text="@string/btn_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:onClick="getLimpar"/-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <EditText
            android:id="@+id/origin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Origem" />

        <EditText
            android:id="@+id/destination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Destino" />


    </LinearLayout>

    <fragment
        android:id="@+id/fragment1"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
